--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ol>
 
 <p>i love falar com estranhos e roles aleatorios!❤️</p>
-
+<p>AAAAA não sei deixar a imagem menor pro celular 😭</p>
     <p><a target="_blank" href="https://www.youtube.com/watch?v=OCtAxMdSo1k&list=PLSwZEX4QVJIOzx1gkDb9asjv_fOLYv_W5&ab_channel=MCARCANJO-Topic"><Button>minha playlist</Button></a></p>
             
 <p>algumas fotos:</p>
