--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
     <p><a target="_blank" href="https://www.youtube.com/watch?v=OCtAxMdSo1k&list=PLSwZEX4QVJIOzx1gkDb9asjv_fOLYv_W5&ab_channel=MCARCANJO-Topic"><Button>minha playlist</Button></a></p>
             
 <p>algumas fotos:</p>
-<imagem>
-<img src="foto final.png" alt="">
-</imagem>
-
-
+<div id="imagem!"><img src="foto final.png" width="320" height="205"></div>
 
 </body>
 </html>
