--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     <p><a target="_blank" href="https://www.youtube.com/watch?v=OCtAxMdSo1k&list=PLSwZEX4QVJIOzx1gkDb9asjv_fOLYv_W5&ab_channel=MCARCANJO-Topic"><Button>minha playlist</Button></a></p>
             
 <p>algumas fotos:</p>
-<div id="imagem!"><img src="foto final.png" width="320" height="205"></div>
+<div id="imagem!"><img src="foto final.png" width="350" height="250"></div>
+
+<p>amo piadas de 5* Serie </p>
+    <p>exemplo</p>
+<p>so pq ele tá cabeludo já quer virar rockeiro KKKKKKKKKKKKKKKKK</p>
 
 </body>
 </html>
