--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
     <p>exemplo</p>
 <p>so pq ele tá cabeludo já quer virar rockeiro KKKKKKKKKKKKKKKKK</p>
 
+<!--comi o cu de quem ta lendo KKKKKKKKK -->
+
 </body>
 </html>
