--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>olá, meu nome e luiz 😊</p>
-    <p>sou um estudante de programação que estava entediado e resolveu sair de casa </p>
+    <p>sou um estudante de programação que estava entediado e resolveu sair de casa</p>
+    <p> então se você esta lendo isso e bem provavel que eu esteja atras de algum rolê</p>
     <p>se me achou interessante vem falar comigo</p>
     <p>eu só tenho a cara fechada mas tenho a personalidade de uma criaança encapetada </p>
 <p>Aqui esta uma lista de coisas que eu gosto de falar: </p>
