--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 <p>i love falar com estranhos e roles aleatorios!❤️</p>
 
-    <p><a target="_blank" href="https://www.youtube.com/watch?v=OCtAxMdSo1k&list=PLSwZEX4QVJIOzx1gkDb9asjv_fOLYv_W5&ab_channel=MCARCANJO-Topic"><Button>minha playlist</Button></a></p>
+<p><a target="" href="3index.html"><Button>VENDO OU TROCO </Button></a></p>
+<p><a target="_blank" href="https://www.youtube.com/watch?v=OCtAxMdSo1k&list=PLSwZEX4QVJIOzx1gkDb9asjv_fOLYv_W5&ab_channel=MCARCANJO-Topic"><Button>minha playlist</Button></a></p>
             
 <p>algumas fotos:</p>
 <div id="imagem!"><img src="foto final.png" width="350" height="250"></div>
