--- a/ediçoes.html
+++ b/ediçoes.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <img src="artes finais/RTEmagicC_RTEmagicC_c16ab3ff53.jpg.jpg" alt="">
+    <img src="kaka.jpg" alt="">
+    <img src="matheus gang.jpg" alt="">
+    <img src="treinador pokemon.jpeg" alt="">
+    <img src="emi no mine.png" alt="">
 </body>
 </html>
