--- a/vendo ou troco.html
+++ b/vendo ou troco.html
@@ -10,6 +10,6 @@
     <p><a target="" href="index.html"><Button>pagina principal</Button></a></p>
     <p>estou vendendo minhas habilidades de photoshop R$50</p>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwVG1QOjNmRugy4Ea6IkFKeEYzoCZ23KUUkQ&s" alt="">
-    <p><a target="" href="ediçoes.html"><Button>minhas edições</Button></a></p>
+    <p><a target="blank" href="https://br.pinterest.com/luizalcantara1745/_created/"><Button>minhas edições</Button></a></p>
 </body>
 </html>
