--- a/vendo ou troco.html
+++ b/vendo ou troco.html
@@ -11,5 +11,8 @@
     <p>estou vendendo minhas habilidades de photoshop R$50</p>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwVG1QOjNmRugy4Ea6IkFKeEYzoCZ23KUUkQ&s" alt="">
     <p><a target="blank" href="https://br.pinterest.com/luizalcantara1745/_created/"><Button>minhas edições</Button></a></p>
+    <p>coisas que eu estou vendendo</p>
+    <img src="https://play-lh.googleusercontent.com/-t3rK4VwNHQiwPlvmCNvRFcL-gi8Zb9oYlL9mEgJ4s2C4hL42fwU0nq6FczRT835Ag" alt="">
+    <p><a target="_blank" href="https://www.facebook.com/marketplace/you/selling"><button>minha lojinha</button></a></p>
 </body>
 </html>
